--- a/src/components/CardData/CardData.css
+++ b/src/components/CardData/CardData.css
@@ -1,3 +1,49 @@
-.card-data{
+.compact-card{
+	display: flex;
+	flex: 1;
+	height: 7rem !important;
+	border-radius: 0.7rem;
+	color: white;
+	position: relative;
+	cursor: pointer;
+	padding: 1rem;
+}
+.compact-card:hover{
+	box-shadow: none;
+}
 
+.radial-bar{
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	gap: 1rem;
+}
+.CircularProgressbar{
+	 width: 4rem !important;
+	 overflow: visible;
+}
+.CircularProgressbar-path{
+	stroke: white !important;
+	stroke-width: 12px !important;
+	filter: drop-shadow(2px 4px 6px white);
+}
+.CircularProgressbar-trail{
+	display: none;
+}
+.CircularProgressbar-text{
+	fill: white !important;
+}
+.radial-bar>span{
+	font-size: 17px;
+	font-weight: bold;
+}
+
+/* detail */
+.detail{
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-end;
 }
