--- a/src/components/CardData/CardData.css
+++ b/src/components/CardData/CardData.css
@@ -70,3 +70,16 @@
 	justify-content: space-between;
 	padding: 1rem;
 }
+.expanded-card > span:nth-of-type(1){
+	color: white;
+	font-size: 26px;
+	font-weight: bold;
+	text-shadow: 0px 0px 15px white;
+}
+.expanded-card > span:nth-of-type(2){
+	color: rgb(223,222,222);
+	font-size: 16px;
+}
+.chart-container{
+	width: 70%; 
+}
