--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -10,7 +10,7 @@
 	display: flex;
 	height: 5rem;
 	font-weight: bold;
-	font-style: 20px;
+	font-size: 20px;
 	gap: 1rem;
 	align-items: center;
 	justify-content: center;
@@ -60,4 +60,47 @@
 	position: absolute;
 	bottom: 2.3rem;
 	width: 100%;
+}
+
+.bars{
+	display: none;
+}
+@media screen and (max-width: 1200px ){
+	.menuItem>span{
+		display: none;
+	}
+	.logo{
+		display: none;
+	}
+}
+@media screen and (max-width: 768px ){
+	.Sidebar{
+		position: fixed;
+		z-index: 9;
+		background: #ffe0e0;
+		width: 55%;
+		padding-right: 1rem;
+		height: 100%;
+	}
+	.menuItem>span{
+		display: block;
+	}
+	.logo{
+		display: flex;
+		
+	}
+	.menu .menuItem:last-child{
+		position: relative;
+		margin-top: 6rem;
+	}
+	.bars{
+		display: flex;
+		position: fixed;
+		top: 3.5rem;
+		z-index: 9;
+		background: #ffe0e0;
+		padding: 10px;
+		border-radius: 10px;
+
+	}
 }
